added new colors + changed content
yes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <section class = "intro">
                 <div id="intro-text">
                     <h1>About</h1>
-                    <h4>My name is Kushagra, I make games, and I am currently studying Computer Science Engineering in India. Growing up playing games in my Windows 98 family computer, I built interest in developing them soon after I was introduced to programming in school. After which, I began learning programming for games using LÖVE 2D engine in Lua, and later switched to Unity.  </h4>
+                    <h4>My name is Kushagra, I make games, and I am currently studying Computer Science Engineering in India. I grew up playing games on my Windows 98 family computer and got into developing them after I was introduced to programming in school. Later I began learning to program for games using LÖVE 2D engine in Lua, and after some time switched to Unity.   </h4>
                 </div>
                 <div style="font-size: 0px;">
                     <div class = "link">
