--- a/projects/03D/03D.html
+++ b/projects/03D/03D.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
-                        <p>03D is a first person perspective action platformer project, which is based on the idea of recreating mechanics of one of my most favorite games, Katana Zero in a 3D environment.
+                        <p>03D is a first-person perspective action platformer project, which is based on the idea of recreating the mechanics of one of my favorite games Katana Zero in a 3D environment.
 
                         </p>
                     </div>
@@ -61,24 +61,26 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed for the entire project using Unity Game Engine. Notable sections : Player Mechanics/Movement, Enemy AI (State Machine), Combat.</td>
+                                <td>Programmed for the entire project using Unity Game Engine. Notable Sections: Player Mechanics, Enemy AI (State Machine), Combat.</td>
                             </tr>
                             <tr>
                                 <td>Level Design</td>
-                                <td>Designed and created level, using unity's probuilder</td>
+                                <td>Designed and created levels using Unity's ProBuilder.</td>
                             </tr>
                             <tr>
                                 <td>Other</td>
-                                <td>Cel shader for player and enemy (using shadergraph).Sound Production.</td>
+                                <td>Cel Shader (using Shader Graph), Sound Design.</td>
                             </tr>
                         </table>
                     </div>
                     <p>&nbsp</p>
                         <p>Assets used:</p>
-                        <p>Enemy Model and Animations: mixamo</p>
-                        <p>Sword</p>
-                        <p>Textures for Ceiling and Floor</p>
-                        <p>Footstep sounds</p>
+                        <p>- Enemy Model and Animations: Mixamo
+                        </p>
+                        <p>- Sword Model
+                        </p>
+                        <p>- Textures for Floor and Walls</p>
+                        <p>- Footstep sounds</p>
                 </div>
             </section>
         </div>
