--- a/projects/Base Dolphin/Base Dolphin.html
+++ b/projects/Base Dolphin/Base Dolphin.html
@@ -45,7 +45,10 @@
                 <div class = "description">
                     <div class = "one-liner">
                         <p>
-                            Base Dolphin is a 3D audio only shooter game where the player has to detect the location of targets using the radar, which periodically plays notification sounds panned to the direction of targets, to aim and shoot them down. This game was my submission for the 'Game for Blind Gamers' Game Jam.
+                            Base Dolphin is an audio-only shooter game, in which the player has to detect the location of targets using the radar, that periodically sends a pulse and plays the notification sound panned in the direction of the targets. The player can accordingly move the mouse horizontally to aim and shoot the targets.
+                        </p>
+                        <p>
+                            This game was my submission for the 'Game for Blind Gamers' Game Jam.
                         </p>
                     </div>
                     <p>&nbsp</p>
@@ -59,11 +62,11 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed for entire game using Unity engine. Notable Sections: Target (Submarines) spawner and path, radar, audio only sensitivity tester/adjuster.</td>
+                                <td>Programmed for the entire game using Unity engine. Notable Sections: Target (Submarine) spawner and path, radar, audio-only sensitivity tester/adjuster.</td>
                             </tr>
                             <tr>
                                 <td>Sounds</td>
-                                <td>All the sound effects were made using various samples and virtual instruments on fl studio. Sounds for announcements were made using sampled text-to-speech.</td>
+                                <td>All the sound effects were made using various samples and virtual instruments on FL Studio. Sounds for announcements were made using sampled text-to-speech.</td>
                             </tr>
                             <tr>
                                 <td>Other</td>
@@ -73,7 +76,7 @@
                     </div>
                     <p>&nbsp;</p>
                     <p>Assests used:</p>
-                    <p><a href="https://assetstore.unity.com/packages/tools/gui/ui-accessibility-plugin-uap-87935">UI Accessibility Plugin</a> : for UI navigation and Text-to-speech</p>
+                    <p>- <a href="https://assetstore.unity.com/packages/tools/gui/ui-accessibility-plugin-uap-87935" target="_blank">UI Accessibility Plugin</a> : for UI navigation and Text-to-speech</p>
                 </div>
             </section>
         </div>
