--- a/projects/DesertPenguin/desertPenguin.html
+++ b/projects/DesertPenguin/desertPenguin.html
@@ -46,8 +46,11 @@
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
-                        <p>Desert Penguin is a 2D endless runner game, in which the player (the penguin) has to dodge bombs and arrow bombs spawned by an aeroplane while moving forward, to avoid dark zone and survive. The aeroplane may also spawn 'glitches' (Headblock: Spawns a block on random jumps, Fireboots: Reduces health when player walks over covered ground, Dig: Random Jumps towards opposite direction) that adds to the chaos of the game. This game was my submission for the 'HackerEarth's Game Jam 1.0'.
-
+                        <p>
+                            Desert Penguin is a 2D endless runner game, in which the player (the penguin) has to dodge bombs and arrow bombs dropped by an airplane while moving forward to avoid dark zone and survive. The airplane may also spawn 'glitches' (Headblock: Spawns a block on random jumps, Fireboots: Reduces health when the player walks over the covered ground, Dig: Random Jumps towards opposite direction) that adds to the chaos of the game.
+                        </p>
+                        <p>
+                            This game was my submission for the 'HackerEarth's Game Jam 1.0'.
                         </p>
                     </div>
                     <p>&nbsp</p>
@@ -61,15 +64,21 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed for entire game using Unity engine. Notable Sections: Player Mechanics, Glitch Mechanics, Bomb Spawner/Mechanics, Level Generator</td>
+                                <td>Programmed for the entire game using Unity engine. Notable Sections: Player Mechanics, Glitch Mechanics, Bomb Spawner/Mechanics, Level Generator.</td>
                             </tr>
                             <tr>
                                 <td>Other</td>
-                                <td>All the sounds were samples from freesound.org and were slightly edited on fl studio. Design. UI.</td>
+                                <td>All the sounds were samples from freesound.org and were slightly edited on FL Studio. Design, UI.</td>
                             </tr>
                         </table>
                     </div>
-                    <p>Art Assets used: Aeroplane sprite and Stars on head animation.</p>
+                    <p>Assets used:</p>
+                    <p>
+                        - Airplane sprite
+                    </p>
+                    <p>
+                        - Stars on head animation.
+                    </p>
                 </div>
             </section>
         </div>
