--- a/projects/SpaceRings/spaceRings.html
+++ b/projects/SpaceRings/spaceRings.html
@@ -44,8 +44,8 @@
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
-                        <p>Space Rings is a 3D endless runner game in which the player has to drive the spaceship through the rings, while avoiding obstacles on the way. It was made for the final assignment of CS50's Game Development course.
-                        </p>
+                        <p>Space Rings is a 3D endless runner game in which the player controls a spaceship, and in order to keep it charged/moving, the player has to drive it through the rings that are placed at certain intervals. There are also two types of obstacles placed in between rings which makes it difficult for the player to follow the rings.</p>
+                        <p>This project was my submission for the final assignment of CS50's Game Development course.</p>                            
                     </div>
                     <p>&nbsp</p>
                     <div class = "features">
@@ -58,7 +58,7 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed for entire game using Unity engine. Notable Sections: Space Ship Movement/Controller, Level Spawner, Obstacle Mechanics.</td>
+                                <td>Programmed for the entire game using Unity engine. Notable Sections: Spaceship Controller, Level Spawner, Obstacle Mechanics.</td>
                             </tr>
                             <tr>
                                 <td>Sounds and Music</td>
@@ -66,7 +66,7 @@
                             </tr>
                             <tr>
                                 <td>Models</td>
-                                <td>All the models were made using unity's built in probuilder.</td>
+                                <td>All the models were made using Unity's built-in ProBuilder.</td>
                             </tr>
                             <tr>
                                 <td>Other</td>
