--- a/projects/Rainee/rainee.html
+++ b/projects/Rainee/rainee.html
@@ -39,8 +39,9 @@
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
-                        <p>Rainee and the Magical Plant is a platformer game about a girl trying to find the proper planting place for a magic plant. It consists of four levels, the first and the last being for the plot, and the second and third levels are puzzle and parkour level respectively. This game was our two member team's entry for the GDN Game Jam 2021.
+                        <p>Rainee and the Magical Plant is a platformer game about a girl (played by the player) trying to find the proper planting place for a magic plant. It consists of four levels. The first and the last level are for the plot, and the second and third are puzzle and parkour levels respectively. 
                         </p>
+                        <p>This game was our two-member team's entry for the GDN Game Jam 2021.</p>
                     </div>
                     <p>&nbsp</p>
                     <div class = "features">
@@ -53,7 +54,7 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed for entire game using Unity engine. Notable Sections: Player Movement, Multi Scene Workflow, Dialogue management,UI Management, Sound Management</td>
+                                <td>Programmed for the entire game using Unity Engine. Notable Sections: Player Movement, Level Mechanics, Dialogue management, UI Management, Sound Management.</td>
                             </tr>
                             <tr>
                                 <td>Design</td>
@@ -61,14 +62,14 @@
                             </tr>
                             <tr>
                                 <td>Other</td>
-                                <td>All the sounds were samples from freesound.org and were slightly edited on fl studio. Skeletal animations.</td>
+                                <td>All the sounds were samples from freesounds.org and were slightly edited on FL Studio, Skeletal animations.</td>
                             </tr>
                         </table>
                     </div>
                     <p>&nbsp;</p>
                         <p>Credits:</p>
-                        <p>abbygee#1028 : Music, Art, Story, Design </p>
-                        <p>Art assets used : <a href="https://www.kenney.nl/assets?q=2d">Kenney's Free Assests</a></p>
+                        <p>- <a href="https://itch.io/profile/vhscassette" target="_blank">link/abby</a> : Music, Art, Story, Design. </p>
+                        <p>- Art assets used : <a href="https://www.kenney.nl/assets?q=2d" target="_blank">Kenney's Free Assests</a></p>
                 </div>
                 <div class = "screenshots">
                     <img src="Images/MenuScreen.png" ">
