--- a/index.html
+++ b/index.html
@@ -89,4 +89,10 @@
             </section>
         </div>
     </div>
+    <div id = "footer">
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>Email: nkushagra16@gmail.com</p>
+    </div>
+    
 </body>
