--- a/projects/Base Dolphin/Base Dolphin.html
+++ b/projects/Base Dolphin/Base Dolphin.html
@@ -80,6 +80,11 @@
                 </div>
             </section>
         </div>
+        <div id = "footer">
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>Email: nkushagra16@gmail.com</p>
+        </div>
     </div>
 
 </body>
