--- a/projects/Other/other.html
+++ b/projects/Other/other.html
@@ -19,7 +19,7 @@
     </section>
     <div id = "except-nav">
         <div id="bg-image" style="background-image: url(images/Screenshot\ \(37\).png);"></div>
-        <div class = "main-container" style="padding-bottom: 4em;">
+        <div class = "main-container">
             <section class = "title">
                 <div class = "name">
                     <h1>Small/Non Game Programming related work</h1>
@@ -59,11 +59,13 @@
                 </h2>
                 <p>Made using HTML and CSS.     
                 </p>
-            </div>
-
-            
+            </div>   
         </div>
-        
+        <div id = "footer">
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>Email: nkushagra16@gmail.com</p>
+        </div> 
     </div>
 
 </body>
