--- a/projects/Rainee/rainee.html
+++ b/projects/Rainee/rainee.html
@@ -78,6 +78,12 @@
                     <img src="Images/crows.png" >
                 </div>
             </section>
+            
+        </div>
+        <div id = "footer">
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>Email: nkushagra16@gmail.com</p>
         </div>
     </div>
 
