--- a/projects/SpaceRings/spaceRings.html
+++ b/projects/SpaceRings/spaceRings.html
@@ -77,6 +77,11 @@
                 </div>
             </section>
         </div>
+        <div id = "footer">
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>Email: nkushagra16@gmail.com</p>
+        </div>
     </div>
 
 </body>
