--- a/projects/Other/other.html
+++ b/projects/Other/other.html
@@ -59,6 +59,7 @@
                 </h2>
                 <p>Made using HTML and CSS.     
                 </p>
+                <img src="../../images/prototype/hehe.jpg">
             </div>   
         </div>
         <div id = "footer">
